# agent-ssh

./: .gitignore  Cargo.toml  README.md  deny.toml  task-journal.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: agent-ssh.rb
configs/: agent-ssh.example.toml
crates/broker/: Cargo.toml
crates/broker/src/: audit.rs  error.rs  executor.rs  lib.rs  planner.rs  render.rs  session.rs  signer.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: audit.rs  config.rs  error.rs  identifiers.rs  lib.rs  session.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs
docs/: architecture.md  claude-code-agent-ssh-prompt.md  collaboration.md  configuration.md  threat-model.md
examples/step-ca/: README.md
openspec/: project.md
openspec/changes/ci-release-trigger-alignment/: README.md  design.md  proposal.md  tasks.md
openspec/changes/ci-release-trigger-alignment/records/: task-journal.md
openspec/changes/ci-release-trigger-alignment/specs/installation-packaging/: spec.md
openspec/changes/discouraged-root-login-exception/: README.md  design.md  proposal.md  tasks.md
openspec/changes/discouraged-root-login-exception/records/: task-journal.md
openspec/changes/discouraged-root-login-exception/reviews/: codex-subagent-findings.md
openspec/changes/discouraged-root-login-exception/specs/approval-flow/: spec.md
openspec/changes/discouraged-root-login-exception/specs/broker-config/: spec.md
openspec/changes/installability-task-recording-and-fail2ban-safety/: README.md  design.md  proposal.md  tasks.md
openspec/changes/installability-task-recording-and-fail2ban-safety/records/: task-journal.md
openspec/changes/installability-task-recording-and-fail2ban-safety/reviews/: claude-review-blocked.md
openspec/changes/installability-task-recording-and-fail2ban-safety/specs/broker-config/: spec.md
openspec/changes/installability-task-recording-and-fail2ban-safety/specs/installation-packaging/: spec.md
openspec/changes/installability-task-recording-and-fail2ban-safety/specs/ssh-transport-execution/: spec.md
openspec/changes/installability-task-recording-and-fail2ban-safety/specs/task-recording/: spec.md
openspec/changes/legacy-password-auth-compatibility/: README.md  design.md  proposal.md  tasks.md
openspec/changes/legacy-password-auth-compatibility/records/: task-journal.md
openspec/changes/legacy-password-auth-compatibility/reviews/: claude-review-blocked.md  codex-subagent-design-findings.md
openspec/changes/legacy-password-auth-compatibility/specs/approval-flow/: spec.md
openspec/changes/legacy-password-auth-compatibility/specs/audit-logging/: spec.md
openspec/changes/legacy-password-auth-compatibility/specs/broker-config/: spec.md
openspec/changes/secure-broker-foundation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/secure-broker-foundation/records/: task-journal.md
openspec/changes/secure-broker-foundation/reviews/: claude-config-rendering-review.md
openspec/changes/session-based-interactive-mode/: design.md  proposal.md  tasks.md
openspec/specs/approval-flow/: spec.md
openspec/specs/audit-logging/: spec.md
openspec/specs/broker-config/: spec.md
openspec/specs/cli-surface/: spec.md
openspec/specs/command-profile-execution/: spec.md
openspec/specs/server-alias-resolution/: spec.md
openspec/specs/signer-abstraction/: spec.md
scripts/: bootstrap-dev.sh  check-task-journal.sh  install-server-ca-trust.sh  install.sh  record-task.sh  validate-openspec.sh
site/: 404.html  index.html  styles.css
site/get-started/: index.html
site/reference/: index.html
site/security/: index.html
skills/agent-ssh/: SKILL.md
skills/agent-ssh/agents/: openai.yaml
skills/agent-ssh/references/: cli-cheatsheet.md
(+14 files in other folders)
