[package]
name = "agent-ssh-broker"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agent-ssh-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
