[package]
name = "agent-ssh-common"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
